[build-system]
requires = ["setuptools", "click", "requests", "secrets"]
build-backend = "setuptools.build_meta"

[project]
name = "passeo"
version = "1.0.8"
authors = [
    { name="Arjun Sharda", email="sharda.aj17@gmail.com" },
]
description = "🔓 Generate a Password with multiple options"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/ArjunSharda/Passeo"
"Bug Tracker" = "https://github.com/ArjunSharda/Passeo/issues"
